Connected proportional editing behaviour "regression" since 2.67 #40675

Closed
opened 2014-06-17 20:27:51 +02:00 by Olson Burry · 7 comments

System Information
Linux mint 17, 8gb ram, AMD 1090t, GTX275

Blender Version
Broken: 2.68, 2.69, 2.70, 2.71
Worked: 2.67

Short description of error
The "connected" proportional editing mode used to follow edges connected to the selection and use the appropriate falloff on them, now it appears to cross faces.

Exact steps for others to reproduce the error
(G)rab selected vertex with connected proportional editing mode active, the behaviour is the same as with prop edit just "on". Deleting the face brings back the "old" behaviour of 2.67, which was rather more useful IMO

Try same file in 2.67b and connected works as I expected, despite the face being there.

Original
original.jpg

2.67 behaviour
267behaviour.jpg

2.71 behaviour
271behaviour.jpg

propedit.blend

**System Information** Linux mint 17, 8gb ram, AMD 1090t, GTX275 **Blender Version** Broken: 2.68, 2.69, 2.70, 2.71 Worked: 2.67 **Short description of error** The "connected" proportional editing mode used to follow edges connected to the selection and use the appropriate falloff on them, now it appears to cross faces. **Exact steps for others to reproduce the error** (G)rab selected vertex with connected proportional editing mode active, the behaviour is the same as with prop edit just "on". Deleting the face brings back the "old" behaviour of 2.67, which was rather more useful IMO Try same file in 2.67b and connected works as I expected, despite the face being there. Original ![original.jpg](https://archive.blender.org/developer/F94577/original.jpg) 2.67 behaviour ![267behaviour.jpg](https://archive.blender.org/developer/F94572/267behaviour.jpg) 2.71 behaviour ![271behaviour.jpg](https://archive.blender.org/developer/F94574/271behaviour.jpg) [propedit.blend](https://archive.blender.org/developer/F94576/propedit.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @OliverBurn

Added subscriber: @OliverBurn

This issue was referenced by 2ccbdec6e5

This issue was referenced by 2ccbdec6e5c1cb97e19a142dfe5c1255e8ec3bf0

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Fixed 2ccbdec6e5

Fixed 2ccbdec6e5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2ccbdec6e5.

Closed by commit 2ccbdec6e5.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40675
No description provided.